2007-07-25  Thomas Wood  <thos@gnome.org>

	Patch by:  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-wp-item.c: (gnome_wp_item_update_description):Simplify tooltip
	descriptions.  Change "Location" to "Folder".  Do not overuse bold text.
	Closes bug 460111.


2007-07-25  Denis Washington <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	* appearance-themes.c: (theme_load_from_gconf):
	* theme-save.c: (write_theme_to_disk):
	Implement saving of the cursor theme name in metathemes, and add a
	"Default Pointer" option to the cursor theme list in Theme Details.

2007-07-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf): when reading current
	settings from gconf, get the color scheme from the gtk theme if necessary
	to allow matching against themes retrieved via gnome-theme-info

2007-07-24  Thomas Wood  <thos@gnome.org>

	* data/Makefile.am: Add makefile

2007-07-24  Thomas Wood  <thos@gnome.org>

	* data: Add a data sub-directory for non-code items

2007-07-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_settings),
	(prepare_list), (style_init): improve color scheme matching; simplify
	code; don't possibly unref cursor thumbs twice; remove redundant color
	scheme initialization
	* appearance.glade: make theme details window modal to prevent the
	user from editing non-custom themes

2007-07-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init): bump all tooltips code to gtk
	2.11.6

2007-07-23  Matthias Clasen  <mclasen@redhat.com>

	* appearance-desktop.c: Use new GTK+ convenience API for
	icon view tooltips.  (#455985)

2007-07-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_load_stuffs), (desktop_init),
	(desktop_shutdown):
	* appearance-desktop.h:
	* appearance-main.c: (main):
	* appearance.h: add option to add wallpapers via the command line
	(closes bug #456337)

2007-07-08  Jens Granseuer  <jensgr@gmx.net>
